smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/invalid-trait-shape-id-key.smithy
// Syntax error at line 4, column 30: Expected RPAREN(')') but found DOT('.') | Model
namespace smithy.example

@externalDocumentation(smithy.example#foo: "bar")
string MyString
